fix(static/styles): browser scrollbar overlapped by header component

--- a/shop/static/shop/styles/base/_reset.css
+++ b/shop/static/shop/styles/base/_reset.css
@@ -9,3 +9,7 @@
 a {
     text-decoration: none;
 }
+
+::-webkit-scrollbar {
+    z-index: 9999;
+}
