--- a/shop/static/shop/styles/components/_header.css
+++ b/shop/static/shop/styles/components/_header.css
@@ -5,7 +5,7 @@
     position: fixed;
     padding: 1rem 16rem;
     display: flex;
-    z-index: 9999;
+    z-index: 9998;
     width: 100%;
     top: 0;
     gap: 1rem;
